# stash

./: Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
scripts/: README.md  cleanup_test_data.sh  test_advanced_scenarios.sh  test_bulk_add.sh
src/: lib.rs  main.rs
src/commands/: add.rs  config.rs  edit.rs  export.rs  import.rs  list.rs  list_tags.rs  mark_read.rs  mark_unread.rs  mod.rs  note.rs  open.rs  pick.rs  remove.rs  restore.rs  search.rs  star.rs  tag.rs  tag_delete.rs  tag_merge.rs  tag_rename.rs  tag_stats.rs  tui.rs  unstar.rs
src/config/: mod.rs  schema.rs
src/db/: mod.rs  models.rs  queries.rs
src/db/migrations/: V1__initial_schema.sql
src/export/: html.rs  json.rs  markdown.rs  mod.rs
src/fetch/: content.rs  http.rs  metadata.rs  mod.rs
src/ui/: browser.rs  formatters.rs  icons.rs  list.rs  mod.rs  theme.rs  tui.rs
tests/: db_queries_test.rs  metadata_extraction_test.rs  url_processing_test.rs
tests/common/: mod.rs
