[package]
name = "stash"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive"] }
colored = "3.0.0"
comfy-table = "7.2.1"
directories = "5.0"
html2md = "0.2.15"
indicatif = "0.18.0"
readability = "0.3.0"
refinery = { version = "0.9.0", features = ["rusqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
